--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+# Trajectory files
+*.vtf
+
+# stress profile data files
+*.dat
+
+# simulation text directory
+test/
+
 # Node artifact files
 node_modules/
 dist/
